package com.you.lld.inventory.model;

public enum ProductStatus {
  ACTIVE,
  DISCONTINUED,
  OUT_OF_STOCK,
  SEASONAL
}
