package com.you.lld.inventory.model;

public enum UserStatus {
  ACTIVE,
  SUSPENDED,
  INACTIVE
}
