classDiagram

    class InMemoryInventoryService {
        -final ConcurrentHashMap~Key,Entry~ entries
        -final ConcurrentHashMap~ReservationId,Reservation~ reservations
        +receiveStock() void
        +reserve() ReservationId
        +release() void
        +commit() void
        +adjust() void
        +transfer() void
        +getStock() StockSnapshot
    }

    class InMemoryOrderService {
        -final InventoryService inventoryService
        -final ConcurrentHashMap~OrderId,Order~ orders
        -final ConcurrentHashMap~PaymentId,Payment~ payments
        -final ConcurrentHashMap~UserId,User~ users
        -final ConcurrentHashMap~SkuId,Product~ products
        -final List~WarehouseId~ warehouses
        +addUser() void
        +addProduct() void
        +placeOrder() Order
        +confirmPayment() Order
        +cancelOrder() Order
        +updateOrderStatus() Order
        +getOrder() Order
        +getUserOrders() List~Order~
        +checkAvailability() boolean
        +getDeliveryEstimate() DeliveryEstimate
    }

    class Identifiers {
        -static final long serialVersionUID
        -final String value
        -static final long serialVersionUID
        -final String value
        -static final long serialVersionUID
        -final String value
        +of() static SkuId
        +random() static SkuId
        +value() String
        +of() static WarehouseId
        +random() static WarehouseId
        +value() String
    }

    class OrderLineItem {
        -static final long serialVersionUID
        -final SkuId skuId
        -final String productName
        -final long quantity
        -final Money unitPrice
        -final Money lineTotal
        -final ReservationId reservationId
        +skuId() SkuId
        +productName() String
        +quantity() long
        +unitPrice() Money
        +lineTotal() Money
        +reservationId() ReservationId
        +isReserved() boolean
        +withReservation() OrderLineItem
    }

    class Order {
        -static final long serialVersionUID
        -final OrderId orderId
        -final UserId userId
        -final List~OrderLineItem~ lineItems
        -final Address deliveryAddress
        -final OrderStatus status
        -final Money subtotal
        -final Money deliveryFee
        -final Money taxes
        -final Money total
        +orderId() OrderId
        +userId() UserId
        +lineItems() List~OrderLineItem~
        +deliveryAddress() Address
        +status() OrderStatus
        +subtotal() Money
        +deliveryFee() Money
        +taxes() Money
        +total() Money
        +createdAt() LocalDateTime
    }

    class OrderId {
        -static final long serialVersionUID
        -final String value
        +of() static OrderId
        +random() static OrderId
        +value() String
    }

    class Product {
        -static final long serialVersionUID
        -final SkuId skuId
        -final String name
        -final String description
        -final CategoryId categoryId
        -final Money unitPrice
        -final String brand
        -final ProductStatus status
        -final boolean perishable
        -final Integer shelfLifeDays
        +skuId() SkuId
        +name() String
        +description() String
        +categoryId() CategoryId
        +unitPrice() Money
        +brand() String
        +status() ProductStatus
        +isPerishable() boolean
        +shelfLifeDays() Integer
        +isActive() boolean
    }

    class PaymentStatus {
        <<enumeration>>
        PENDING
        PROCESSING
        COMPLETED
        FAILED
        REFUNDED
    }

    class Payment {
        -static final long serialVersionUID
        -final PaymentId paymentId
        -final OrderId orderId
        -final UserId userId
        -final Money amount
        -final PaymentMethod method
        -final PaymentStatus status
        -final String gatewayTransactionId
        -final LocalDateTime createdAt
        -final LocalDateTime processedAt
        +paymentId() PaymentId
        +orderId() OrderId
        +userId() UserId
        +amount() Money
        +method() PaymentMethod
        +status() PaymentStatus
        +gatewayTransactionId() String
        +createdAt() LocalDateTime
        +processedAt() LocalDateTime
        +isSuccessful() boolean
    }

    class OrderStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        PROCESSING
        SHIPPED
        DELIVERED
        CANCELLED
        RETURNED
    }

    class User {
        -static final long serialVersionUID
        -final UserId userId
        -final String email
        -final String name
        -final String phone
        -final List~Address~ addresses
        -final UserStatus status
        -final LocalDateTime createdAt
        +userId() UserId
        +email() String
        +name() String
        +phone() String
        +addresses() List~Address~
        +status() UserStatus
        +createdAt() LocalDateTime
        +isActive() boolean
    }

    class WarehouseId {
        -static final long serialVersionUID
        -final String value
        +of() static WarehouseId
        +random() static WarehouseId
        +value() String
    }

    class UserId {
        -static final long serialVersionUID
        -final String value
        +of() static UserId
        +random() static UserId
        +value() String
    }

    class Address {
        -static final long serialVersionUID
        -final String line1
        -final String line2
        -final String city
        -final String state
        -final String pincode
        -final String country
        -final double latitude
        -final double longitude
        -final boolean isDefault
        +line1() String
        +line2() String
        +city() String
        +state() String
        +pincode() String
        +country() String
        +latitude() double
        +longitude() double
        +isDefault() boolean
    }

    class PaymentId {
        -static final long serialVersionUID
        -final String value
        +of() static PaymentId
        +random() static PaymentId
        +value() String
    }

    class PaymentMethod {
        <<enumeration>>
        CREDIT_CARD
        DEBIT_CARD
        UPI
        NET_BANKING
        WALLET
        CASH_ON_DELIVERY
    }

    class SkuId {
        -static final long serialVersionUID
        -final String value
        +of() static SkuId
        +random() static SkuId
        +value() String
    }

    class UserStatus {
        <<enumeration>>
        ACTIVE
        INACTIVE
        SUSPENDED
        DELETED
    }

    class CategoryId {
        -static final long serialVersionUID
        -final String value
        +of() static CategoryId
        +random() static CategoryId
        +value() String
    }

    class ReservationId {
        -static final long serialVersionUID
        -final String value
        +of() static ReservationId
        +random() static ReservationId
        +value() String
    }

    class ProductStatus {
        <<enumeration>>
        AVAILABLE
        OUT_OF_STOCK
        DISCONTINUED
        COMING_SOON
    }

    class DeliveryEstimate {
        -static final long serialVersionUID
        -final WarehouseId nearestWarehouse
        -final LocalDateTime earliestDelivery
        -final LocalDateTime latestDelivery
        -final int distanceKm
        -final boolean expressAvailable
        +nearestWarehouse() WarehouseId
        +earliestDelivery() LocalDateTime
        +latestDelivery() LocalDateTime
        +distanceKm() int
        +isExpressAvailable() boolean
    }

    class StockSnapshot {
        -static final long serialVersionUID
        -final long onHand
        -final long reserved
        +onHand() long
        +reserved() long
        +available() long
    }

    class OrderService {
        <<interface>>
        +createOrder(order) String
        +getOrder(orderId) Order
        +updateOrderStatus(orderId, status) void
    }

    class InventoryService {
        <<interface>>
        +addProduct(product) void
        +updateStock(productId, quantity) void
        +getStock(productId) int
    }

    DeliveryEstimate --> WarehouseId
    Order --> OrderId
    Order --> UserId
    Order "1" --> "*" OrderLineItem
    Order --> Address
    Order --> OrderStatus
    Order --> WarehouseId
    Identifiers --> SkuId
    Identifiers --> WarehouseId
    Identifiers --> ReservationId
    InMemoryInventoryService --> SkuId
    InMemoryInventoryService --> WarehouseId
    InMemoryInventoryService --> ReservationId
    InMemoryInventoryService --> StockSnapshot
    InMemoryOrderService --> InventoryService
    InMemoryOrderService "1" --> "*" WarehouseId
    InMemoryOrderService --> User
    InMemoryOrderService --> Product
    InMemoryOrderService --> Order
    InMemoryOrderService --> UserId
    InMemoryOrderService --> OrderLineItem
    InMemoryOrderService --> Address
    InMemoryOrderService --> PaymentMethod
    InMemoryOrderService --> OrderId
    InMemoryOrderService --> OrderStatus
    InMemoryOrderService --> SkuId
    InMemoryOrderService --> DeliveryEstimate
    OrderLineItem --> SkuId
    OrderLineItem --> ReservationId
    User --> UserId
    User "1" --> "*" Address
    User --> UserStatus
    Payment --> PaymentId
    Payment --> OrderId
    Payment --> UserId
    Payment --> PaymentMethod
    Payment --> PaymentStatus
    Product --> SkuId
    Product --> CategoryId
    Product --> ProductStatus
